Third commit - add Answer Rating test

--- a/questions/pom.xml
+++ b/questions/pom.xml
@@ -48,6 +48,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.opswat</groupId>
+			<artifactId>metadefender-core-client</artifactId>
+			<version>4.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
